projects/kubernetes-local-lab/manifests/scenarios/service-not-reachable.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-broken
  namespace: platform-lab
spec:
  type: ClusterIP
  selector:
    app: podinfo-typo
  ports:
    - name: http
      port: 80
      targetPort: http
